# BermejoLives

./: .env.prod.example  .gitignore  AGENTS.md  DEPLOY.md  README.md  docker-compose.prod.yml
backend/: .dockerignore  .env.example  .env.prod.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  campo.py  comercio.py  health.py  moderacion.py  observabilidad.py  usuario.py  webhook.py
backend/app/core/: auth.py  config.py  text.py
backend/app/db/: repository.py  session.py
backend/app/models/: schemas.py  whatsapp.py
backend/app/services/: clasificador.py  imagenes.py  ingest.py  observabilidad.py  reservalo_sync.py  tienda_client.py  transcription.py  whatsapp_client.py
backend/tests/: conftest.py  test_auth.py  test_campo.py  test_comercio.py  test_ingest.py  test_moderacion.py  test_observabilidad.py  test_usuario.py  test_whatsapp_client.py
docs/: analisis-factibilidad.md  architect-journey.md  arquitectura-repos.md  cambios.md  circuitos.md  contrato-integracion.md  estado-del-proyecto.md  handoff-2026-06-30.md  marketplace-ecommerce.md  mi-comercio.md  migracion-encontralo-store.md  modelo-comercial-y-ecosistema.md  modelo-negocio.html  open-questions.md  pendientes.md
frontend/: .dockerignore  .env.example  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
infra/: .env.example  docker-compose.yml
memory/: project_db_connection.md
prototype/: admin.html  index.html  negocio.html  producto.html
scripts/: deploy-all.sh  osm_import.py  requirements.txt
(+96 files in other folders)
