[project]
name = "bermejo-backend"
version = "0.1.0"
description = "Bermejo Live Market · API de ingesta WhatsApp + moderación + catálogo"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "supabase>=2.5",
  "pyjwt>=2.8",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
